Renamed path(s) to folder(s)
