# api/group/secrets/types.go
@@ -8,35 +8,35 @@ import (
 
 type (
 	Secret struct {
-		UID     string `json:"UID" description:"Secondary unique identifier" example:"abc-def-ghi"`
-		PathUID string `json:"PathUID" description:"Path unique identifier" example:"/"`
-		Name    string `json:"Name" description:"Secret name" example:"DEBUG"`
-		Value   string `json:"Value" description:"Secret value" example:"Test"`
-		Type    string `json:"Type" description:"Secret value type" example:"int"`
+		UID       string `json:"UID" description:"Secondary unique identifier" example:"abc-def-ghi"`
+		FolderUID string `json:"FolderUID" description:"Folder unique identifier" example:"/"`
+		Name      string `json:"Name" description:"Secret name" example:"DEBUG"`
+		Value     string `json:"Value" description:"Secret value" example:"Test"`
+		Type      string `json:"Type" description:"Secret value type" example:"int"`
 	}
 
-	Path struct {
+	Folder struct {
 		UID       string `json:"UID" description:"Secondary unique identifier" example:"abc-def-ghi"`
 		ParentUID string `json:"ParentUID" description:"Secondary unique identifier" example:"abc-def-ghi"`
-		Name      string `json:"Name" description:"Path name" example:"Folder #1"`
+		Name      string `json:"Name" description:"Folder name" example:"Folder #1"`
 	}
 
 	CreateSecret struct {
-		PathUID string `json:"PathUID" description:"Path unique identifier" example:"/"`
-		Name    string `json:"Name" description:"Secret name" example:"DEBUG"`
-		Value   string `json:"Value" description:"Secret value" example:"Test"`
-		Type    string `json:"Type" description:"Secret value type" example:"int"`
+		FolderUID string `json:"FolderUID" description:"Folder unique identifier" example:"/"`
+		Name      string `json:"Name" description:"Secret name" example:"DEBUG"`
+		Value     string `json:"Value" description:"Secret value" example:"Test"`
+		Type      string `json:"Type" description:"Secret value type" example:"int"`
 	}
 
 	GetSecretsRQ struct {
-		PathUID    string                `json:"PathUID" description:"Folder unique identifier" example:"abc-def-ghi"`
+		FolderUID  string                `json:"FolderUID" description:"Folder unique identifier" example:"abc-def-ghi"`
 		Pagination pagination.Pagination `json:"Pagination" description:"Pagination"`
 		Order      []ordering.Order      `json:"Order" description:"Order"`
 	}
 
 	GetSecretsRS struct {
 		Secrets []Secret `json:"Secrets"`
-		Paths   []Path   `json:"Paths"`
+		Folders []Folder `json:"Folders"`
 		rqrs.ResponseListRS
 	}
 
