# structs/var.go
@@ -3,13 +3,13 @@ package structs
 import (
 	"github.com/redis/go-redis/v9"
 	"gorm.io/gorm"
-	"hideout/internal/paths"
+	"hideout/internal/folders"
 	"hideout/internal/secrets"
 )
 
 var (
-	Paths   []paths.Path
-	Secrets []secrets.Secret // Secret path map
+	Folders []folders.Folder
+	Secrets []secrets.Secret // Secret folder map
 	Redis   *redis.Client
 	Gorm    *gorm.DB
 )
